--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
         "@angular/platform-browser": "~8.0.1",
         "@angular/platform-browser-dynamic": "~8.0.1",
         "@angular/router": "~8.0.1",
+        "@babel/compat-data": "^7.8.0",
         "rxjs": "~6.4.0",
         "tslib": "^1.9.0",
         "zone.js": "~0.9.1"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^0.901.3",
+        "@angular-devkit/build-angular": "^0.803.24",
         "@angular/cli": "~8.0.3",
         "@angular/compiler-cli": "~8.0.1",
         "@angular/language-service": "~8.0.1",
